[package]
name = "oxford_join"
version = "0.2.3"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.61"
description = "Join string slices with Oxford Commas!"
license = "WTFPL"
repository = "https://github.com/Blobfolio/oxford_join"
readme = "README.md"
keywords = [ "join", "string", "list", "grammar" ]
categories = [ "no-std" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
]

[package.metadata.bashman]
name = "Oxford Join"
bash-dir = "./"
man-dir = "./"
credits-dir = "./"

[dev-dependencies]
brunch = "0.2.*"

[[bench]]
name = "oj_join"
harness = false
