[package]
name = "oxford_join"
version = "0.6.0"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.87"
description = "Join string slices with Oxford Commas!"
license = "WTFPL"
repository = "https://github.com/Blobfolio/oxford_join"
readme = "README.md"
keywords = [ "join", "string", "list", "grammar" ]
categories = [ "no-std" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
]

[package.metadata.bashman]
name = "Oxford Join"

[dev-dependencies]
brunch = "0.10.*"

[[bench]]
name = "oj_join"
harness = false
